# ai-experiments

./: .coverage  .gitignore  Modelfile  README.md  pyproject.toml
ai-doc-agent/: Dockerfile  README_DELETION.md  README_KNOWLEDGE_STACKING.md  add_to_index.py  api.py  delete_from_index.py  example_deletion.py  example_usage.py  image_processing.py  index.faiss  index.pkl  main.py  memory.py  rag.py  text_processing.py  ui.py  vector_search.py
common/: __init__.py  models.py  snipetter.py  utils.py
fastapi-llm-api/: .coverage  MCP_INTEGRATION.md  README.md  llm_app.py  mcp_integration.py  ollama_app.py  social_media_post.md  social_media_post_es.md  test_llm.py  test_mcp_integration.py
fastapi-mcp-api/: README.md  app.py  blog_post.md  blog_post_es.md  test_client.py
fastapi-ollama-api/: .coverage  README.md  blog_post.txt  blog_post_es.txt  ollama_app.py  test_ollama.py
scaffolder/: HEXAGONAL_SCAFFOLDING_GUIDE.md  README.md  main.py  pyproject.toml
scaffolder/.cursor/rules/: knowledge.mdc
scaffolder/src/: __init__.py
scaffolder/src/scaffolder/: __init__.py  api.py  mcp_server.py  scaffolding.py  simple_mcp_server.py
scaffolder/tests/: test_scaffolding.py
scaffolder/twitter_clone/: .gitignore  README.md  pyproject.toml  requirements.txt
scaffolder/twitter_clone/.cursor/: rules
scaffolder/twitter_clone/application/ports/driven/: __init__.py  follow_repository_port.py  like_repository_port.py  post_repository_port.py  user_repository_port.py
scaffolder/twitter_clone/application/ports/driving/: __init__.py  post_service_port.py  social_service_port.py  user_service_port.py
scaffolder/twitter_clone/application/services/: post_service.py  social_service.py  user_service.py
scaffolder/twitter_clone/config/: asgi.py  settings.py  urls.py  wsgi.py
scaffolder/twitter_clone/domain/entities/: __init__.py  follow.py  like.py  mixins.py  post.py  user.py
scaffolder/twitter_clone/driven/: __init__.py
scaffolder/twitter_clone/driven/db/: adapter.py  admin.py  apps.py  mapper.py  models.py
scaffolder/twitter_clone/driven/db/migrations/: 0001_initial.py
scaffolder/twitter_clone/driving/: __init__.py
scaffolder/twitter_clone/driving/api/: urls.py
scaffolder/twitter_clone/driving/api/v1/: adapter.py  mapper.py  models.py  urls.py
scaffolder/twitter_clone/tests/: __init__.py  conftest.py
scaffolder/twitter_clone/tests/application/: test_services.py
scaffolder/twitter_clone/tests/domain/: test_entities.py
scaffolder/twitter_clone/tests/driven/: __init__.py  test_adapters.py
scaffolder/twitter_clone/tests/driving/: __init__.py  test_api.py
