[project]
name = "twitter_clone"
version = "0.1.0"
description = "Django project following hexagonal architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=4.2.0,<5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests"]
addopts = "--tb=short"
